--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+*,
+::before,
+::after {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -30,8 +39,21 @@
 }
 
 .pool-container {
-  background-color: red;
+  background-color: #ccc;
   width: 400px;
   height: 300px;
+  padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.pool-container #main-pool {
+  padding-bottom: 100%;
+  width: 100%;
+  background: red;
 }
 /*# sourceMappingURL=style.css.map */
