--- a/style.scss
+++ b/style.scss
@@ -26,19 +26,31 @@ $pool-container: 400px;
   }
 }
 
-.pool-container {
-  background-color: #ccc;
-  width: $pool-container;
-
-  padding: 10px;
+#diagram-container {
   display: flex;
-  flex-direction: column;
-  #side-step {
-    background-color: black;
-  }
-  #main-pool {
+  background-color: yellow;
+  width: $pool-container;
+  align-items: center;
+  padding: 10px;
+  #pool-container {
+    background-color: #ccc;
     width: 100%;
-    background: red;
-    display: inline-block;
+
+    display: flex;
+    flex-direction: column;
+    #side-step {
+      background-color: black;
+    }
+    #main-pool {
+      width: 100%;
+      background: red;
+      display: inline-block;
+    }
+  }
+  #roller {
+    width: 20px;
+    height: 300px;
+    background: blue;
+    margin-left: 10px;
   }
 }
