--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
           box-sizing: border-box;
 }
 
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+}
+
 .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -36,6 +41,27 @@
       -ms-flex-direction: column;
           flex-direction: column;
   margin: 10px;
+  color: #777777;
+}
+
+.form-container .select-option select {
+  height: 35px;
+  border: solid 3px #a9a9a9;
+  margin: 3px 0 3px 0;
+  border-radius: 5px;
+  color: #777777;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  min-width: 100px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  padding: 3px;
+}
+
+.form-container .select-option select:focus {
+  outline: none;
 }
 
 #diagram-container {
@@ -47,12 +73,12 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 10px;
+  padding: 10px 5px 10px 5px;
 }
 
 #diagram-container #pool-container {
-  background-color: #ccc;
   width: 100%;
+  margin: 0 5px 0 5px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -63,7 +89,7 @@
 }
 
 #diagram-container #pool-container #side-step {
-  background-color: black;
+  background-color: red;
 }
 
 #diagram-container #pool-container #main-pool {
@@ -76,6 +102,6 @@
   width: 20px;
   height: 300px;
   background: blue;
-  margin-left: 10px;
+  margin: 0 5px 0 5px;
 }
 /*# sourceMappingURL=style.css.map */
