--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,10 @@ $pool-container: 400px;
   margin: 0;
   box-sizing: border-box;
 }
-
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+}
 .container {
   display: flex;
   justify-content: space-around;
@@ -23,6 +26,23 @@ $pool-container: 400px;
     display: flex;
     flex-direction: column;
     margin: 10px;
+
+    color: #777777;
+    select {
+      height: 35px;
+      border: solid 3px #a9a9a9;
+      margin: 3px 0 3px 0;
+      border-radius: 5px;
+      color: #777777;
+      width: fit-content;
+      min-width: 100px;
+      appearance: none;
+
+      padding: 3px;
+      &:focus {
+        outline: none;
+      }
+    }
   }
 }
 
@@ -31,15 +51,14 @@ $pool-container: 400px;
   background-color: yellow;
   width: $pool-container;
   align-items: center;
-  padding: 10px;
+  padding: 10px 5px 10px 5px;
   #pool-container {
-    background-color: #ccc;
     width: 100%;
-
+    margin: 0 5px 0 5px;
     display: flex;
     flex-direction: column;
     #side-step {
-      background-color: black;
+      background-color: red;
     }
     #main-pool {
       width: 100%;
@@ -51,6 +70,6 @@ $pool-container: 400px;
     width: 20px;
     height: 300px;
     background: blue;
-    margin-left: 10px;
+    margin: 0 5px 0 5px;
   }
 }
