--- a/style.css
+++ b/style.css
@@ -68,7 +68,10 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: yellow;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  background: #ccc;
   width: 400px;
   -webkit-box-align: end;
       -ms-flex-align: end;
@@ -86,16 +89,31 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-}
-
-#diagram-container #pool-container #side-step {
-  background-color: red;
+  -webkit-filter: drop-shadow(0px calc(2px * (-1)) 0px #5a95b4) drop-shadow(0px 2px 0px #5a95b4) drop-shadow(calc(2px * (-1)) 0px 0px #5a95b4) drop-shadow(2px 0px 0px #5a95b4);
+          filter: drop-shadow(0px calc(2px * (-1)) 0px #5a95b4) drop-shadow(0px 2px 0px #5a95b4) drop-shadow(calc(2px * (-1)) 0px 0px #5a95b4) drop-shadow(2px 0px 0px #5a95b4);
+  position: relative;
 }
 
 #diagram-container #pool-container #main-pool {
   width: 100%;
-  background: red;
   display: inline-block;
+}
+
+#diagram-container #pool-container #side-step,
+#diagram-container #pool-container #main-pool {
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+          clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+
+#diagram-container #pool-container #side-step::before,
+#diagram-container #pool-container #main-pool::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(120deg, #6dcdeb 0%, #7cc0eb 100%);
 }
 
 #diagram-container #roller {
