--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@ $pool-container: 400px;
 $border-color: #5a95b4;
 $border-width: 2px;
 $pool-color: linear-gradient(120deg, #6dcdeb 0%, #7cc0eb 100%);
+$lines-color: #236c93;
 
 *,
 ::before,
@@ -61,7 +62,8 @@ body {
     margin: 0 5px 0 5px;
     display: flex;
     flex-direction: column;
-    filter: drop-shadow(0px calc(#{$border-width} * (-1)) 0px $border-color)
+    filter: url("#goo")
+      drop-shadow(0px calc(#{$border-width} * (-1)) 0px $border-color)
       drop-shadow(0px $border-width 0px $border-color)
       drop-shadow(calc(#{$border-width} * (-1)) 0px 0px $border-color)
       drop-shadow($border-width 0px 0px $border-color);
@@ -70,7 +72,18 @@ body {
     }
     #main-pool {
       width: 100%;
-      display: inline-block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      p {
+        color: $border-color;
+        position: relative;
+        font-weight: bold;
+        font-size: 18;
+
+        width: 100%;
+        text-align: center;
+      }
     }
     #side-step,
     #main-pool {
@@ -79,7 +92,6 @@ body {
     #side-step::before,
     #main-pool::before {
       content: "";
-
       position: absolute;
       top: 0;
       left: 0;
@@ -90,7 +102,6 @@ body {
   }
   #roller {
     width: 20px;
-
     background: blue;
     margin: 0 5px 0 5px;
   }
