--- a/style.css
+++ b/style.css
@@ -82,13 +82,35 @@ body {
   background: yellow;
 }
 
-#diagram-container #extra-container {
+#diagram-container #overall-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: calc(13px + 10px) auto calc(13px + 10px);
+      grid-template-columns: calc(13px + 10px) auto calc(13px + 10px);
+  -ms-grid-rows: auto calc( 13px + 10px);
+      grid-template-rows: auto calc( 13px + 10px);
+      grid-template-areas: "left-dimension pool-container right-dimension" ". bottom-dimension .";
+  width: 100%;
+}
+
+#diagram-container #overall-container #left-dimension {
+  width: 13px;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: left-dimension;
+  background-color: red;
+}
+
+#diagram-container #overall-container #pool-container {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: pool-container;
   width: 100%;
   -webkit-filter: drop-shadow(0px calc(2px * (-1)) 0px #5196bb) drop-shadow(0px 2px 0px #5196bb) drop-shadow(calc(2px * (-1)) 0px 0px #5196bb) drop-shadow(2px 0px 0px #5196bb);
           filter: drop-shadow(0px calc(2px * (-1)) 0px #5196bb) drop-shadow(0px 2px 0px #5196bb) drop-shadow(calc(2px * (-1)) 0px 0px #5196bb) drop-shadow(2px 0px 0px #5196bb);
 }
 
-#diagram-container #extra-container #pool-container {
+#diagram-container #overall-container #pool-container #extra-container {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -102,7 +124,7 @@ body {
   position: relative;
 }
 
-#diagram-container #extra-container #pool-container #main-pool {
+#diagram-container #overall-container #pool-container #extra-container #main-pool {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -115,7 +137,7 @@ body {
           justify-content: center;
 }
 
-#diagram-container #extra-container #pool-container #main-pool p {
+#diagram-container #overall-container #pool-container #extra-container #main-pool p {
   color: #5196bb;
   position: relative;
   font-weight: bold;
@@ -124,14 +146,14 @@ body {
   text-align: center;
 }
 
-#diagram-container #extra-container #pool-container #side-step,
-#diagram-container #extra-container #pool-container #main-pool {
+#diagram-container #overall-container #pool-container #extra-container #side-step,
+#diagram-container #overall-container #pool-container #extra-container #main-pool {
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
           clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
-#diagram-container #extra-container #pool-container #side-step::before,
-#diagram-container #extra-container #pool-container #main-pool::before {
+#diagram-container #overall-container #pool-container #extra-container #side-step::before,
+#diagram-container #overall-container #pool-container #extra-container #main-pool::before {
   content: "";
   position: absolute;
   top: 0;
@@ -139,6 +161,30 @@ body {
   right: 0;
   bottom: 0;
   background: linear-gradient(120deg, #6dcdeb 0%, #7cc0eb 100%);
+}
+
+#diagram-container #overall-container #right-dimension {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: right-dimension;
+  height: 100%;
+  width: 13px;
+  margin-left: auto;
+  background-color: red;
+}
+
+#diagram-container #overall-container #bottom-dimension {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: bottom-dimension;
+  width: 100%;
+  height: 13px;
+  margin-top: auto;
+  background-color: blue;
+}
+
+#diagram-container #roller {
+  margin-bottom: 14px;
 }
 
 #diagram-container #roller #rod {
