--- a/style.scss
+++ b/style.scss
@@ -76,6 +76,9 @@ body {
       width: $dimension-block-width;
       grid-area: left-dimension;
       background-color: red;
+      height: 100px;
+      display: flex;
+      align-self: flex-end;
     }
     width: 100%;
     #pool-container {
@@ -129,6 +132,8 @@ body {
       width: $dimension-block-width;
       margin-left: auto;
       background-color: red;
+      display: flex;
+      align-self: flex-end;
     }
     #bottom-dimension {
       grid-area: bottom-dimension;
