--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   --roller-horizontal-distance: 50px;
+  --dimension-block-offset: 10px;
 }
 
 *,
@@ -110,13 +111,42 @@ body {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: left-dimension;
-  background-color: red;
+  -webkit-box-shadow: 0px 1px 0 0 #236c93, 0px -1px 0 0 #236c93;
+          box-shadow: 0px 1px 0 0 #236c93, 0px -1px 0 0 #236c93;
   height: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -ms-flex-item-align: end;
       align-self: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#diagram-container #overall-container #left-dimension .arrow1 {
+  margin-top: 1px;
+  fill: #ff6400;
+}
+
+#diagram-container #overall-container #left-dimension #line {
+  border-left: 1px solid #236c93;
+  height: 100%;
+  width: 1px;
+  background-color: #236c93;
+  margin: 1px 0 1px 0;
+}
+
+#diagram-container #overall-container #left-dimension .arrow2 {
+  margin-bottom: 1px;
+  fill: #ff6400;
 }
 
 #diagram-container #overall-container #pool-container {
@@ -124,11 +154,25 @@ body {
   -ms-grid-column: 2;
   grid-area: pool-container;
   width: 100%;
+  position: relative;
+}
+
+#diagram-container #overall-container #pool-container #side-dimension {
+  height: 0px;
+  width: 13px;
+  background-color: red;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-left: 10px;
+}
+
+#diagram-container #overall-container #pool-container #border-container {
   -webkit-filter: drop-shadow(0px calc(2px * (-1)) 0px #5196bb) drop-shadow(0px 2px 0px #5196bb) drop-shadow(calc(2px * (-1)) 0px 0px #5196bb) drop-shadow(2px 0px 0px #5196bb);
           filter: drop-shadow(0px calc(2px * (-1)) 0px #5196bb) drop-shadow(0px 2px 0px #5196bb) drop-shadow(calc(2px * (-1)) 0px 0px #5196bb) drop-shadow(2px 0px 0px #5196bb);
 }
 
-#diagram-container #overall-container #pool-container #extra-container {
+#diagram-container #overall-container #pool-container #border-container #extra-container {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -142,7 +186,7 @@ body {
   position: relative;
 }
 
-#diagram-container #overall-container #pool-container #extra-container #main-pool {
+#diagram-container #overall-container #pool-container #border-container #extra-container #main-pool {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -155,7 +199,7 @@ body {
           justify-content: center;
 }
 
-#diagram-container #overall-container #pool-container #extra-container #main-pool p {
+#diagram-container #overall-container #pool-container #border-container #extra-container #main-pool p {
   color: #5196bb;
   position: relative;
   font-weight: bold;
@@ -164,14 +208,14 @@ body {
   text-align: center;
 }
 
-#diagram-container #overall-container #pool-container #extra-container #side-step,
-#diagram-container #overall-container #pool-container #extra-container #main-pool {
+#diagram-container #overall-container #pool-container #border-container #extra-container #side-step,
+#diagram-container #overall-container #pool-container #border-container #extra-container #main-pool {
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
           clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
-#diagram-container #overall-container #pool-container #extra-container #side-step::before,
-#diagram-container #overall-container #pool-container #extra-container #main-pool::before {
+#diagram-container #overall-container #pool-container #border-container #extra-container #side-step::before,
+#diagram-container #overall-container #pool-container #border-container #extra-container #main-pool::before {
   content: "";
   position: absolute;
   top: 0;
@@ -202,8 +246,33 @@ body {
   grid-area: bottom-dimension;
   width: 100%;
   height: 13px;
-  margin-top: auto;
-  background-color: blue;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 1px 0px #236c93, -1px 0px #236c93;
+          box-shadow: 1px 0px #236c93, -1px 0px #236c93;
+}
+
+#diagram-container #overall-container #bottom-dimension .arrow1 {
+  margin-left: 1px;
+  fill: #ff6400;
+}
+
+#diagram-container #overall-container #bottom-dimension #line {
+  width: 100%;
+  height: 1px;
+  background-color: #236c93;
+  margin: 0 1px 0 1px;
+}
+
+#diagram-container #overall-container #bottom-dimension .arrow2 {
+  margin-right: 1px;
+  fill: #ff6400;
 }
 
 #diagram-container #roller {
@@ -215,6 +284,7 @@ body {
 }
 
 #diagram-container #roller #end2 {
-  y: calc(100% - 8px);
+  -webkit-transform: translateY(calc(100% - 8px));
+          transform: translateY(calc(100% - 8px));
 }
 /*# sourceMappingURL=style.css.map */
