--- a/style.css
+++ b/style.css
@@ -99,11 +99,15 @@ body {
   -ms-grid-column: 2;
   grid-area: top-dimension;
   height: 13px;
-  background-color: red;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 1px 0px #236c93, -1px 0px #236c93;
+          box-shadow: 1px 0px #236c93, -1px 0px #236c93;
 }
 
 #diagram-container #overall-container #left-dimension {
@@ -131,24 +135,6 @@ body {
           align-items: center;
 }
 
-#diagram-container #overall-container #left-dimension .arrow1 {
-  margin-top: 1px;
-  fill: #ff6400;
-}
-
-#diagram-container #overall-container #left-dimension #line {
-  border-left: 1px solid #236c93;
-  height: 100%;
-  width: 1px;
-  background-color: #236c93;
-  margin: 1px 0 1px 0;
-}
-
-#diagram-container #overall-container #left-dimension .arrow2 {
-  margin-bottom: 1px;
-  fill: #ff6400;
-}
-
 #diagram-container #overall-container #pool-container {
   -ms-grid-row: 2;
   -ms-grid-column: 2;
@@ -160,11 +146,23 @@ body {
 #diagram-container #overall-container #pool-container #side-dimension {
   height: 0px;
   width: 13px;
-  background-color: red;
   position: absolute;
   top: 0;
   left: 0;
   margin-left: 10px;
+  -webkit-box-shadow: 0 -1px #236c93;
+          box-shadow: 0 -1px #236c93;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 2px;
 }
 
 #diagram-container #overall-container #pool-container #border-container {
@@ -232,12 +230,20 @@ body {
   height: 100%;
   width: 13px;
   margin-left: auto;
-  background-color: red;
+  -webkit-box-shadow: 0 1px #236c93, 0 -1px #236c93;
+          box-shadow: 0 1px #236c93, 0 -1px #236c93;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-item-align: end;
       align-self: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #diagram-container #overall-container #bottom-dimension {
@@ -258,23 +264,6 @@ body {
           box-shadow: 1px 0px #236c93, -1px 0px #236c93;
 }
 
-#diagram-container #overall-container #bottom-dimension .arrow1 {
-  margin-left: 1px;
-  fill: #ff6400;
-}
-
-#diagram-container #overall-container #bottom-dimension #line {
-  width: 100%;
-  height: 1px;
-  background-color: #236c93;
-  margin: 0 1px 0 1px;
-}
-
-#diagram-container #overall-container #bottom-dimension .arrow2 {
-  margin-right: 1px;
-  fill: #ff6400;
-}
-
 #diagram-container #roller {
   margin-bottom: 14px;
 }
@@ -286,5 +275,40 @@ body {
 #diagram-container #roller #end2 {
   -webkit-transform: translateY(calc(100% - 8px));
           transform: translateY(calc(100% - 8px));
+}
+
+.arrow1 {
+  margin-top: 1px;
+  fill: #ff6400;
+}
+
+.arrow2 {
+  margin-bottom: 1px;
+  fill: #ff6400;
+}
+
+.arrow3 {
+  margin-left: 1px;
+  fill: #ff6400;
+}
+
+.arrow4 {
+  margin-right: 1px;
+  fill: #ff6400;
+}
+
+.lineVertical {
+  border-left: 1px solid #236c93;
+  height: 100%;
+  width: 1px;
+  background-color: #236c93;
+  margin: 1px 0 1px 0;
+}
+
+.lineHorizontal {
+  width: 100%;
+  height: 1px;
+  background-color: #236c93;
+  margin: 0 1px 0 1px;
 }
 /*# sourceMappingURL=style.css.map */
