--- a/style.scss
+++ b/style.scss
@@ -78,9 +78,11 @@ body {
     #top-dimension {
       grid-area: top-dimension;
       height: $dimension-block-width;
-      background-color: red;
       display: flex;
       width: 100%;
+      align-items: center;
+      box-shadow: 1px 0px $dimension-lines-color,
+        -1px 0px $dimension-lines-color;
     }
     #left-dimension {
       width: $dimension-block-width;
@@ -93,21 +95,6 @@ body {
       align-self: flex-end;
       justify-content: center;
       align-items: center;
-      .arrow1 {
-        margin-top: 1px;
-        fill: $arrow-color;
-      }
-      #line {
-        border-left: 1px solid #{$dimension-lines-color};
-        height: 100%;
-        width: 1px;
-        background-color: $dimension-lines-color;
-        margin: 1px 0 1px 0;
-      }
-      .arrow2 {
-        margin-bottom: 1px;
-        fill: $arrow-color;
-      }
     }
     width: 100%;
     #pool-container {
@@ -117,11 +104,15 @@ body {
       #side-dimension {
         height: 0px;
         width: $dimension-block-width;
-        background-color: red;
         position: absolute;
         top: 0;
         left: 0;
         margin-left: $dimension-block-offset;
+        box-shadow: 0 -1px $dimension-lines-color;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 2px;
       }
       #border-container {
         filter: drop-shadow(
@@ -172,9 +163,11 @@ body {
       height: 100%;
       width: $dimension-block-width;
       margin-left: auto;
-      background-color: red;
+      box-shadow: 0 1px $dimension-lines-color, 0 -1px $dimension-lines-color;
       display: flex;
       align-self: flex-end;
+      flex-direction: column;
+      align-items: center;
     }
     #bottom-dimension {
       grid-area: bottom-dimension;
@@ -185,20 +178,6 @@ body {
       align-items: center;
       box-shadow: 1px 0px $dimension-lines-color,
         -1px 0px $dimension-lines-color;
-      .arrow1 {
-        margin-left: 1px;
-        fill: $arrow-color;
-      }
-      #line {
-        width: 100%;
-        height: 1px;
-        background-color: $dimension-lines-color;
-        margin: 0 1px 0 1px;
-      }
-      .arrow2 {
-        margin-right: 1px;
-        fill: $arrow-color;
-      }
     }
   }
 
@@ -211,4 +190,34 @@ body {
       transform: translateY(calc(100% - 8px));
     }
   }
+}
+.arrow1 {
+  margin-top: 1px;
+  fill: $arrow-color;
+}
+.arrow2 {
+  margin-bottom: 1px;
+  fill: $arrow-color;
+}
+.arrow3 {
+  margin-left: 1px;
+  fill: $arrow-color;
+}
+.arrow4 {
+  margin-right: 1px;
+  fill: $arrow-color;
+}
+.lineVertical {
+  border-left: 1px solid #{$dimension-lines-color};
+  height: 100%;
+  width: 1px;
+  background-color: $dimension-lines-color;
+  margin: 1px 0 1px 0;
+}
+
+.lineHorizontal {
+  width: 100%;
+  height: 1px;
+  background-color: $dimension-lines-color;
+  margin: 0 1px 0 1px;
 }
