--- a/style.css
+++ b/style.css
@@ -335,8 +335,6 @@ body {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  width: 1px;
-  background-color: #236c93;
   margin: 1px 0 1px 0;
 }
 
@@ -344,8 +342,7 @@ body {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  height: 1px;
-  background-color: #236c93;
+  border-bottom: 1px solid #236c93;
   margin: 0 1px 0 1px;
 }
 
