--- a/style.scss
+++ b/style.scss
@@ -248,15 +248,12 @@ body {
 .lineVertical {
   border-left: 1px solid #{$dimension-lines-color};
   flex: 1;
-  width: 1px;
-  background-color: $dimension-lines-color;
   margin: 1px 0 1px 0;
 }
 
 .lineHorizontal {
   flex: 1;
-  height: 1px;
-  background-color: $dimension-lines-color;
+  border-bottom: 1px solid #{$dimension-lines-color};
   margin: 0 1px 0 1px;
 }
 
